[gd_scene load_steps=13 format=3 uid="uid://dnb5rxmohnx01"]

[ext_resource type="Texture2D" uid="uid://bmd66qppkk6ui" path="res://Assets/Baby Crab.png" id="1_tptch"]
[ext_resource type="Script" path="res://Scenes/BabyCrab.gd" id="1_ui45p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ynutm"]
atlas = ExtResource("1_tptch")
region = Rect2(0, 0, 64, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_l63v3"]
atlas = ExtResource("1_tptch")
region = Rect2(64, 0, 64, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_26wew"]
atlas = ExtResource("1_tptch")
region = Rect2(0, 42, 64, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_upys0"]
atlas = ExtResource("1_tptch")
region = Rect2(64, 42, 64, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_ppaeg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynutm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l63v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26wew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upys0")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q6f1k"]
radius = 5.0
height = 22.0

[sub_resource type="Animation" id="Animation_0nqwv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1.5, 4, 1)]
}

[sub_resource type="Animation" id="Animation_8qsct"]
resource_name = "default"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_tqmci"]
resource_name = "mutant"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.3332, 0.4165, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 1.5, 4, 1), Color(0, 2.4, 6.4, 1), Color(0, 1.5, 4, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rsd6i"]
_data = {
"RESET": SubResource("Animation_0nqwv"),
"default": SubResource("Animation_8qsct"),
"mutant": SubResource("Animation_tqmci")
}

[node name="BabyCrab" type="Node2D"]
modulate = Color(0, 1.5, 4, 1)
script = ExtResource("1_ui45p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ppaeg")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_q6f1k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_rsd6i")
}
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(8.34465e-07, -0.5)
scale = Vector2(0.933333, 0.85)
rect = Rect2(-15, -10, 30, 20)

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
